# scGPT-multiomics

./: README.md  pyproject.toml  scGPT_2.yml  test.py
Notebooks_to_Py/: Complete_multiomics_script.ipynb  Complete_multiomics_script.py  MEFISTO_Integration_GEX.py  MOFA_Integration_Val.py
multiomics_integration/: MEFISTO-ST-CITE-FULL.ipynb  MEFISTO-ST-CITE-GEX.ipynb  MOFA-Int-Validation.ipynb  MOFA-Int.ipynb
scGPT_docker/: Dockerfile  Dockerfile1  rem_lib.sh  requirements.txt  requirements_conda.txt  unwanted_lib.txt
scgpt/: trainer.py
scgpt/model/: model.py  multiomic_model.py
scgpt/multiomics_integration/: MultiomicsInt-Validation.ipynb  MultiomicsInt.ipynb
scgpt/tasks/: cell_emb.py
scgpt/utils/: util.py
